--- a/partials/_specialists.scss
+++ b/partials/_specialists.scss
@@ -3,6 +3,35 @@
     //overflow-x: hidden;
     height: 100%;
     //padding-bottom: 4rem;
+    $bg-size:30rem;
+    background: url('../assets/blob2.svg');
+    background-repeat:no-repeat;
+    background-size:  $bg-size;
+    background-position: center;
+    animation: background-position 55s ease-in-out infinite alternate;
+
+    @keyframes background-position {
+        0% {
+            background-position: 50% 10%;
+            background-size:  $bg-size;
+          }
+          25% {
+            background-position: 50% 25%;
+            background-size:  $bg-size + 2rem;
+          }
+          50% {
+            background-position: 80% 80%;
+            background-size: $bg-size + 3rem;
+          }
+          75% {
+            background-position: 25% 75%;
+            background-size: $bg-size + 2.5rem;
+          }
+          100% {
+            background-position: 50% 50%;
+            background-size: $bg-size + 0.5rem;
+          }
+      }
 
     .container{
         width:68%;
@@ -168,7 +197,31 @@
 // TAB AND MEDIUM DEVICES
 @media screen and (max-width:1024px){
     #specialists{
-        overflow-x: hidden;
+        //overflow-x: hidden;
+        animation: background-position 35s ease-in-out infinite alternate;
+        $bg-size:38rem;
+    @keyframes background-position {
+        0% {
+            background-position: 50% 10%;
+            background-size:  $bg-size;
+          }
+          25% {
+            background-position: 50% 25%;
+            background-size:  $bg-size + 2rem;
+          }
+          50% {
+            background-position: 80% 80%;
+            background-size: $bg-size + 3rem;
+          }
+          75% {
+            background-position: 25% 75%;
+            background-size: $bg-size + 2.5rem;
+          }
+          100% {
+            background-position: 50% 50%;
+            background-size: $bg-size + 0.5rem;
+          }
+      }
         .container{
             grid-template-columns: repeat(2,1fr);
 
@@ -191,7 +244,33 @@
 // PHONE AND SMALL DEVICES
 @media screen and (max-width:600px){
     #specialists{
-        overflow: hidden;
+        //overflow: hidden;
+        
+        background-repeat:space;
+        animation: background-position 65s ease-in-out infinite alternate;
+        $bg-size:30rem;
+    @keyframes background-position {
+        0% {
+            background-position: 50% 25%;
+            background-size:  $bg-size;
+          }
+          25% {
+            background-position: 50% 25%;
+            background-size:  $bg-size + 2rem;
+          }
+          50% {
+            background-position: 80% 80%;
+            background-size: $bg-size + 3rem;
+          }
+          75% {
+            background-position: 35% 75%;
+            background-size: $bg-size + 2.5rem;
+          }
+          100% {
+            background-position: 40% 40%;
+            background-size: $bg-size + 0.5rem;
+          }
+      }
         .container{
             grid-template-columns: 1fr;
 
